Trying to get server up

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 
 	</head>
     <body>
-        <img src="http://imgur.com/RcQ8K8N" />
+        <h1>Hello World!</h1>
+        <!-- <img src="http://imgur.com/RcQ8K8N" /> -->
     </body>
 </html>
