--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,6 @@
 	</head>
     <body>
         <h1>Hello World!</h1>
-        <!-- <img src="http://imgur.com/RcQ8K8N" /> -->
+        <img src="http://imgur.com/RcQ8K8N" />
     </body>
 </html>
