--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,8 @@
 				
 		<!-- Linked Scripts -->
     	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script> 
+
+        <link href='http://fonts.googleapis.com/css?family=Lato:300,400' rel='stylesheet' type='text/css'>
 		
 		<!-- My Scripts -->
 		<script type="text/javascript" src="index.js"></script>
@@ -18,8 +20,9 @@
 
 	</head>
     <body>
-        
-        <img src="http://i.imgur.com/RcQ8K8N.jpg" />
-		<h1>Hello World!</h1>
+        <div>
+            <h1>Coordinating...</h1>
+            <img src="http://i.imgur.com/RcQ8K8N.jpg" />
+        </div>
     </body>
 </html>
