--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="icon" href="assets/images/logoSmall.png" type="image/png">
+        <link rel="shortcut icon" href="assets/images/logoSmall.png" type="image/png" />
 				
 		<!-- Linked Scripts -->
     	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script> 
