Working on the test date selection. Developing Preference selection

--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
         
 
 	</head>
-    <body>
+    <body id="holdingPage">
         <div>
             <h1>Coordinating...</h1>
             <img src="http://i.imgur.com/RcQ8K8N.jpg" />
