--- a/public/testing.html
+++ b/public/testing.html
@@ -22,23 +22,44 @@
         
 
 	</head>
-<body>
+<body id="testingPage">
+    <div id="preference">
+        <div>Available</div>
+        <div>Not Preferred</div>
+    </div>
     <div>
         <table cellpadding="0" cellspacing="0" id="dataTable">
             <tr>
-                <td>a</td>
-                <td>b</td>
-                <td>c</td>
+                <th></th>
+                <th>M</th>
+                <th>T</th>
+                <th>W</th>
+                <th>Th</th>
+                <th>F</th>
             </tr>
             <tr>
-                <td>d</td>
-                <td>e</td>
-                <td>f</td>
+                <td class="tblTime">8:00</td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
             </tr>
             <tr>
-                <td>g</td>
-                <td>h</td>
-                <td>i</td>
+                <td class="tblTime">8:30</td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td class="tblTime">9:00</td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
             </tr>
         </table>
     </div>
