Still working on color selector

--- a/public/testing.html
+++ b/public/testing.html
@@ -24,8 +24,8 @@
 	</head>
 <body id="testingPage">
     <div id="preference">
-        <div>Available</div>
-        <div>Not Preferred</div>
+        <div id="btn_available">Available</div>
+        <div id="btn_not_preferred">Not Preferred</div>
     </div>
     <div>
         <table cellpadding="0" cellspacing="0" id="dataTable">
