working on home page.

--- a/public/testing.html
+++ b/public/testing.html
@@ -15,10 +15,10 @@
         <link href='http://fonts.googleapis.com/css?family=Lato:300,400' rel='stylesheet' type='text/css'>
 		
 		<!-- My Scripts -->
-		<script type="text/javascript" src="index.js"></script>
+		<script type="text/javascript" src="js/event_handler.js"></script>
 
 		<!-- My Styles -->
-		<link rel="stylesheet" type="text/css" href="style.css">
+		<link rel="stylesheet" type="text/css" href="styles/style.css">
         
 
 	</head>
