--- a/public/index.html
+++ b/public/index.html
@@ -7,18 +7,16 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="icon" href="assets/images/logoSmall.png" type="image/png">
         <link rel="shortcut icon" href="assets/images/logoSmall.png" type="image/png" />
-				
-		<!-- Linked Scripts -->
-    	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script> 
+        <!-- Linked Scripts -->
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script> 
 
         <link href='http://fonts.googleapis.com/css?family=Lato:300,400' rel='stylesheet' type='text/css'>
-		
-		<!-- My Scripts -->
-		<script type="text/javascript" src="index.js"></script>
-
-		<!-- My Styles -->
-		<link rel="stylesheet" type="text/css" href="style.css">
         
+        <!-- My Scripts -->
+        <!--<script type="text/javascript" src="js/event_handler.js"></script>-->
+
+        <!-- My Styles -->
+        <link rel="stylesheet" type="text/css" href="styles/style.css">
 
 	</head>
     <body id="holdingPage">
