--- a/public/home.html
+++ b/public/home.html
@@ -27,11 +27,11 @@
 
 	</head>
 <body id='home'>
-    <nav class="navbar navbar-default">
+    <nav class="navbar navbar-default light-bg">
         <div class="container-fluid">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
@@ -50,9 +50,19 @@
         </div>
     </nav>
     <div class="container">
-    <div class="jumbotron">
-
-    </div>
+        <div id="home-jumbo" class="jumbotron grey-bg">
+            <div class="row">
+                <img src="assets/images/logoSmall.png" class="img-responsive col-md-4">
+                <div class="col-md-8">
+                    <div class="row">
+                        <div id="home-desc" class="col-xs-12">Quickly compare schedules to find a meeting time that works for everyone!</div>
+                    </div>
+                    <div class="row">
+                        <button class="center-block grey-bg" type="create">Create Event</button>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 </html>
