--- a/public/home.html
+++ b/public/home.html
@@ -52,8 +52,8 @@
     <div class="container">
         <div id="home-jumbo" class="jumbotron grey-bg">
             <div class="row">
-                <img src="assets/images/logoSmall.png" class="img-responsive col-md-4">
-                <div class="col-md-8">
+                <img src="assets/images/logoSmall.png" class="img-responsive col-xs-4">
+                <div class="col-xs-8">
                     <div class="row">
                         <div id="home-desc" class="col-xs-12">Quickly compare schedules to find a meeting time that works for everyone!</div>
                     </div>
