home almost done. Still can't get that button down in a reasonable way

--- a/public/home.html
+++ b/public/home.html
@@ -27,42 +27,60 @@
 
 	</head>
 <body id='home'>
-    <nav class="navbar navbar-default light-bg">
-        <div class="container-fluid">
-            <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse-1">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="#">Coordinate</a>
-            </div>
-            <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav">
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Account</a></li>
-                    <li><a href="#">Help</a></li>
-                </ul>
-            </div>
+<nav class="navbar navbar-default light-bg">
+    <div class="container-fluid">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse-1">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="#">Coordinate</a>
         </div>
-    </nav>
-    <div class="container">
-        <div id="home-jumbo" class="jumbotron grey-bg">
-            <div class="row">
-                <img src="assets/images/logoSmall.png" class="img-responsive col-xs-4">
-                <div class="col-xs-8">
-                    <div class="row">
-                        <div id="home-desc" class="col-xs-12">Quickly compare schedules to find a meeting time that works for everyone!</div>
-                    </div>
-                    <div class="row">
-                        <button class="center-block grey-bg" type="create">Create Event</button>
-                    </div>
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav">
+                <li><a href="#">About</a></li>
+                <li><a href="#">Account</a></li>
+                <li><a href="#">Help</a></li>
+            </ul>
+        </div>
+    </div>
+</nav>
+<div id="home-content" class="container-fluid">
+    <div id="home-jumbo" class="jumbotron grey-bg">
+        <div class="row">
+            <div class=" col-xs-4 col-xs-offset-1">
+                <img class="img-responsive" src="assets/images/logoSmall.png" />
+            </div>
+            <div class="col-xs-6">
+                <div class="row">
+                    <div id="home-desc" class="col-xs-12">Quickly compare schedules to find a meeting time that works for everyone!</div>
+                </div>
+                <div class="row">
+                    <button id="home-create" class="center-block grey-bg" type="create">Create Event</button>
                 </div>
             </div>
         </div>
     </div>
+    <div id="home-info-section">
+        <div class="row">
+            <div class="col-xs-3">
+                <div class="info-items"></div>
+            </div>
+            <div class="col-xs-3">
+                <div class="info-items"></div>
+            </div>
+            <div class="col-xs-3">
+                <div class="info-items"></div>
+            </div>
+            <div class="col-xs-3">
+                <div class="info-items"></div>
+            </div>
+        </div>
+    </div>
+</div>
 </body>
 </html>
