--- a/public/home.html
+++ b/public/home.html
@@ -13,11 +13,9 @@
 		<!-- Linked Scripts -->
     	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script> 
         <script src="packages/bootstrap/bootstrap.min.js"></script>
-        <script src="packages/fullcalendar-2.3.1/fullcalendar.js"></script> 
 
         <link href='http://fonts.googleapis.com/css?family=Lato:300,400' rel='stylesheet' type='text/css'>
         <link href='packages/bootstrap/bootstrap.min.css' rel='stylesheet' type='text/css'>
-        <link href='packages/fullcalendar-2.3.1/fullcalendar.min.css' rel='stylesheet' type='text/css'>
 		
 		<!-- My Scripts -->
 		<script type="text/javascript" src="js/home.js"></script>
@@ -72,16 +70,24 @@
     <div id="home-info-section">
         <div class="row">
             <div class="col-xs-3">
-                <div class="info-items"></div>
+                <div class="info-items">
+                    <img src="assets/Breadcrumbs/DarkGrey/CreateEvent.svg" alt="Create Event Image">
+                </div>
             </div>
             <div class="col-xs-3">
-                <div class="info-items"></div>
+                <div class="info-items">
+                    <img src="assets/Breadcrumbs/DarkGrey/Availability.svg" alt="availability Image">
+                </div>
             </div>
             <div class="col-xs-3">
-                <div class="info-items"></div>
+                <div class="info-items">
+                    <img src="assets/Breadcrumbs/DarkGrey/share.svg" alt="share Image">
+                </div>
             </div>
             <div class="col-xs-3">
-                <div class="info-items"></div>
+                <div class="info-items">
+                    <img src="assets/Breadcrumbs/DarkGrey/schedule.svg" alt="schedule Image">
+                </div>
             </div>
         </div>
     </div>
