Worked on inserting availability and movement between pages-added surprise ending

--- a/public/home.html
+++ b/public/home.html
@@ -16,7 +16,8 @@
 
         <link href='http://fonts.googleapis.com/css?family=Lato:300,400' rel='stylesheet' type='text/css'>
         <link href='packages/bootstrap/bootstrap.min.css' rel='stylesheet' type='text/css'>
-		
+		<link rel="stylesheet" href="packages/font-awesome/css/font-awesome.min.css">
+
 		<!-- My Scripts -->
 		<script type="text/javascript" src="js/home.js"></script>
 
@@ -71,22 +72,26 @@
         <div class="row">
             <div class="col-xs-3">
                 <div class="info-items">
-                    <img src="assets/Breadcrumbs/DarkGrey/CreateEvent.svg" alt="Create Event Image">
+                    <div>Create Event</div>
+                    <i class="fa fa-plus-square-o"></i>
                 </div>
             </div>
             <div class="col-xs-3">
                 <div class="info-items">
-                    <img src="assets/Breadcrumbs/DarkGrey/Availability.svg" alt="availability Image">
+                    <div>Insert Availability</div>
+                    <i class="fa fa-calendar"></i>
                 </div>
             </div>
             <div class="col-xs-3">
                 <div class="info-items">
-                    <img src="assets/Breadcrumbs/DarkGrey/share.svg" alt="share Image">
+                    <div>Share Event</div>
+                    <i class="fa fa-share-alt"></i>
                 </div>
             </div>
             <div class="col-xs-3">
                 <div class="info-items">
-                    <img src="assets/Breadcrumbs/DarkGrey/schedule.svg" alt="schedule Image">
+                    <div>Schedule Event</div>
+                    <i class="fa fa-envelope-o"></i>
                 </div>
             </div>
         </div>
