--- a/public/testing.html
+++ b/public/testing.html
@@ -15,53 +15,16 @@
         <link href='http://fonts.googleapis.com/css?family=Lato:300,400' rel='stylesheet' type='text/css'>
 		
 		<!-- My Scripts -->
-		<script type="text/javascript" src="js/event_handler.js"></script>
-
 		<!-- My Styles -->
 		<link rel="stylesheet" type="text/css" href="styles/style.css">
         
 
 	</head>
-<body id="testingPage">
-    <div id="preference">
-        <div id="btn_available">Available</div>
-        <div id="btn_not_preferred">Not Preferred</div>
-    </div>
-    <div>
-        <table cellpadding="0" cellspacing="0" id="dataTable">
-            <tr>
-                <th></th>
-                <th>M</th>
-                <th>T</th>
-                <th>W</th>
-                <th>Th</th>
-                <th>F</th>
-            </tr>
-            <!-- <tr>
-                <td class="tblTime">8:00</td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-            </tr>
-            <tr>
-                <td class="tblTime">8:30</td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-            </tr>
-            <tr>
-                <td class="tblTime">9:00</td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-            </tr> -->
-        </table>
+<body class="container-fluid">
+    <div class="row">
+        <div id="movie-holder" class="col-xs-8 col-offset-xs-2">
+            <iframe width="854" height="510" src="https://www.youtube.com/embed/uIzgfH55rKc?autoplay=1&start=103" frameborder="0" allowfullscreen></iframe>
+        </div>
     </div>
 </body>
 </html>
