--- a/public/availability.html
+++ b/public/availability.html
@@ -31,10 +31,6 @@
 	</head>
 <body>
 <div id="availability" class="container-fluid">
-    <!--
-        do the overall layout. Don't need to worry about the actual grid system yet. 
-        Just make a placeholder thing.
-    -->
     <nav class="navbar navbar-default light-bg">
         <div class="container-fluid">
             <!-- Brand and toggle get grouped for better mobile display -->
@@ -58,7 +54,43 @@
                 </ul>
             </div>
         </div>
-    </nav>
+    </nav> <!--End of Nav Bar-->
+
+    <div id="availability-content" class="col-xs-8 col-xs-offset-2">
+        <div class="row">
+            <h1 id="availability-name" class="col-xs-12">Event Name Here</h1>
+            <p id="availability-descr" class="col-xs-12 lead">Event Description Here</p>
+        </div>
+        <div class="row">
+            <h3 class="col-xs-12">
+                Insert Availability
+            </h3>
+            <div id="availability-preference" class="col-xs-12">
+                Select preference:
+                <button id="btn-available" class="btn btn-default dark-bg">Preferred</button>
+                <button id="btn-not-preferred" class="btn btn-default light-bg">Not Preferred</button>
+            </div>
+        </div>
+        <div class="row">
+            <div id="availability-times" class="col-xs-12">
+                <div>
+                    <table cellpadding="0" cellspacing="0" id="dataTable">
+                        <tr>
+                            <th></th>
+                            <th>M</th>
+                            <th>T</th>
+                            <th>W</th>
+                            <th>Th</th>
+                            <th>F</th>
+                        </tr>
+                    </table>
+                </div>
+            </div>
+            <div class="col-xs-12">
+                <button id="availability-submit" type="submit" class="btn btn-default btn-lg pull-right orange-bg">Create Event</button>
+            </div>
+        </div>
+    </div>
 </div>
 </body>
 </html>
