--- a/public/event.html
+++ b/public/event.html
@@ -60,7 +60,7 @@
         <div class="event-inputs row">
             <form id="event-details" class="col-xs-12">
                 <div class="form-group">
-                    <input type="text" name="event-name" class="form-control" placeholder="Event Name" required="required" title="">
+                    <input class="form-control input-lg" type="text" name="event-name" placeholder="Event Name" required="required" title="">
                 </div>
                 <div class="form-group">   
                     <textarea name="event-descr" class="form-control" placeholder="Even Description" rows="3"></textarea>
@@ -73,21 +73,21 @@
             </div>
         </div>
         <div class="event-inputs row">
-            <form id="event-preferences" class="col-xs-12">
-                <label class="input-label">What times can the event occur?</label>
-                <div class="form-inline">
-                    <div class="form-group">
-                        <input type="time" name="" id="event-time-from" class="form-control" value="" required="" title="">
-                    </div>
-                     to 
-                    <div class="form-group">
-                        <input type="time" name="" id="event-time-to" class="form-control" value="" required="" title="">
+            <form id="event-preferences" class="col-xs-12" method="post" action="availability.html">
+                <div class="row">
+                    <div class="form-group col-xs-12">
+                        <label class="input-label">What times can the event occur?</label>
+                        <div class="form-inline">
+                            <input type="time" name="" id="event-time-from" class="form-control" value="" required="" title="">
+                            to 
+                            <input type="time" name="" id="event-time-to" class="form-control" value="" required="" title="">
+                        </div>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="form-group col-xs-6">
+                    <div class="form-group col-xs-12">
                         <label class="input-label">What is the events length?</label>
-                        <div>
+                        <div class="form-inline">
                             <select id="event-length" name="event-length" class="form-control">
                                 <option value="1" selected="selected">1</option>
                                 <option value="2">2</option>
@@ -95,15 +95,16 @@
                                 <option value="4">4</option>
                                 <option value="5">5</option>
                             </select>
+                            Hour(s)
                         </div>
                     </div>
                 </div>
                 <div class="row">
-                    <label class="input-label col-xs-12">When do you want to be notified?</label>
-                    <div class="checkbox col-xs-12">
-                        <label>
+                    <div class="form-group col-xs-12">
+                        <label class="input-label">When do you want to be notified?</label>
+                        <div class="form-inline">
                             <input type="checkbox" value="">
-                            Notify me after
+                            Notify me after 
                             <select id="event-responses" name="event-responses" class="form-control" required="required">
                                 <option value="1">1</option>
                                 <option value="2">2</option>
@@ -112,10 +113,10 @@
                                 <option value="5">5</option>
                             </select>
                             participants have responded.
-                        </label>
+                        </div>
                     </div>
-                    <div class="checkbox col-xs-12">
-                        <label>
+                    <div class="form-group col-xs-12">
+                        <div class="form-inline">
                             <input type="checkbox" value="">
                             Notify me after
                             <select id="event-responses" name="event-responses" class="form-control" required="required">
@@ -126,19 +127,21 @@
                                 <option value="5">5</option>
                             </select>
                             day(s).
-                        </label>
+                        </div>
                     </div>
-                    <div class="checkbox col-xs-12">
-                        <label>
+                    <div class="form-group col-xs-12">
+                        <div class="form-inline">
                             <input type="checkbox" value="">
                             Notify me after each participant responds.
-                        </label>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-xs-12">
+                        <button type="submit" class="btn btn-default btn-lg pull-right orange-bg">Create Event</button>
                     </div>
                 </div>
             </form>
-            <div class="row">
-                <button type="button" class="btn btn-default pull-right">Create Event</button>
-            </div>
         </div>
     </div>
 </div>
