--- a/public/event.html
+++ b/public/event.html
@@ -73,7 +73,7 @@
             </div>
         </div>
         <div class="event-inputs row">
-            <form id="event-preferences" class="col-xs-12" method="post" action="availability.html">
+            <form id="event-preferences" class="col-xs-12" action="availability.html">
                 <div class="row">
                     <div class="form-group col-xs-12">
                         <label class="input-label">What times can the event occur?</label>
