--- a/public/event_create.html
+++ b/public/event_create.html
@@ -23,7 +23,7 @@
 
 		
 		<!-- My Scripts -->
-		<script type="text/javascript" src="js/event_month.js"></script>
+		<script type="text/javascript" src="js/event_create.js"></script>
 
 		<!-- My Styles -->
 		<link rel="stylesheet" type="text/css" href="styles/style.css">
@@ -73,7 +73,7 @@
             </div>
         </div>
         <div class="event-inputs row">
-            <form id="event-preferences" class="col-xs-12" action="availability.html">
+            <form id="event-preferences" class="col-xs-12">
                 <div class="row">
                     <div class="form-group col-xs-12">
                         <label class="input-label">What times can the event occur?</label>
@@ -138,7 +138,7 @@
                 </div>
                 <div class="row">
                     <div class="col-xs-12">
-                        <button type="submit" class="btn btn-default btn-lg pull-right orange-bg">Create Event</button>
+                        <button id="event-submit" type="submit" class="btn btn-default btn-lg pull-right orange-bg">Create Event</button>
                     </div>
                 </div>
             </form>
