--- a/public/event_create.html
+++ b/public/event_create.html
@@ -78,9 +78,9 @@
                     <div class="form-group col-xs-12">
                         <label class="input-label">What times can the event occur?</label>
                         <div class="form-inline">
-                            <input type="time" name="" id="event-time-from" class="form-control" value="" required="" title="">
+                            <input type="time" name="event-time-from" class="form-control" value="" required="" title="">
                             to 
-                            <input type="time" name="" id="event-time-to" class="form-control" value="" required="" title="">
+                            <input type="time" name="event-time-to" class="form-control" value="" required="" title="">
                         </div>
                     </div>
                 </div>
@@ -103,9 +103,9 @@
                     <div class="form-group col-xs-12">
                         <label class="input-label">When do you want to be notified?</label>
                         <div class="form-inline">
-                            <input type="checkbox" value="">
+                            <input type="checkbox" value="" name="notify-participant">
                             Notify me after 
-                            <select id="event-responses" name="event-responses" class="form-control" required="required">
+                            <select name="notify-num-participants" class="form-control" required="required">
                                 <option value="1">1</option>
                                 <option value="2">2</option>
                                 <option value="3">3</option>
@@ -117,9 +117,9 @@
                     </div>
                     <div class="form-group col-xs-12">
                         <div class="form-inline">
-                            <input type="checkbox" value="">
+                            <input type="checkbox" name="notify-after" value="">
                             Notify me after
-                            <select id="event-responses" name="event-responses" class="form-control" required="required">
+                            <select id="event-responses" name="notify-num-after" class="form-control" required="required">
                                 <option value="1">1</option>
                                 <option value="2">2</option>
                                 <option value="3">3</option>
@@ -131,7 +131,7 @@
                     </div>
                     <div class="form-group col-xs-12">
                         <div class="form-inline">
-                            <input type="checkbox" value="">
+                            <input type="checkbox" name="notify-each" value="">
                             Notify me after each participant responds.
                         </div>
                     </div>
