--- a/public/index.html
+++ b/public/index.html
@@ -60,7 +60,7 @@
             </div>
             <div class="col-xs-6">
                 <div class="row">
-                    <div id="home-desc" class="col-xs-12">Quickly compare schedules to find a meeting time that works for everyone!</div>
+                    <div id="home-desc" class="col-xs-12">Easily find openings in everyone's schedules to plan your event!</div>
                 </div>
                 <div class="row">
                     <button id="home-create" class="center-block grey-bg" type="create">Create Event</button>
